# Core-SDK

./: .gitignore  AUTHORS  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  example.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/aeva/: __init__.py  agent.py
src/aeva/sim/: connector.py
src/aeva/vision/: core.py
src/themisaevra/: virtual.py
src/themisaevra/motion/: planning.py
src/themisaevra/protocols/: __init__.py
